# DISCORD-PRICE-TRACKER

./: .env.example  .gitignore  CLAUDE.md  README.md  agent.md  alembic.ini  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: pr.yml
app/api/: deps.py  errors.py  main.py  security.py
app/bot/: base.py  main.py  permissions.py  ratelimit.py  responses.py
app/config/: limits.py  settings.py
app/db/: session.py
app/models/: __init__.py  alert_event.py  audit_log.py  base.py  fx_rate.py  membership.py  price_snapshot.py  product.py  server.py  user.py  watch.py
app/observability/: logging.py  sentry.py  tracing.py
app/repositories/: __init__.py  alert_repo.py  audit_repo.py  price_repo.py  product_repo.py  server_repo.py  user_repo.py  watch_repo.py
app/scraper/: autoextract.py  browser.py  circuit.py  fetcher.py  identifiers.py  normalize.py  router.py  schemas.py  structured.py  validate.py
app/services/: __init__.py  access_control.py  ai_extract.py  alert_service.py  cooldown.py  dashboard_service.py  discord_oauth.py  errors.py  price_service.py  product_service.py  queue.py  scrape_validation.py  server_service.py  user_service.py  watch_service.py
app/utils/: chart_builder.py  embed_builder.py  ids.py  logger.py  url_utils.py
app/workers/: celery_app.py  discord_dispatcher.py  locks.py  rate_limit.py  redis.py  runtime.py  schedule.py
bot/: main.py
config/: settings.py
dashboard/: next.config.mjs  package-lock.json  package.json
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/lib/: api.ts  use-async.ts  utils.ts
db/: __init__.py  session.py
db/models/: __init__.py  base.py  listing.py  listing_history.py  product.py  store.py  user_watch.py
db/repository/: __init__.py  history_repo.py  listing_repo.py  product_repo.py  store_repo.py  watch_repo.py
docker/: Dockerfile.api  Dockerfile.beat  Dockerfile.bot  Dockerfile.dashboard  Dockerfile.worker
scraper/: __init__.py  extractor.py  firecrawl_client.py  schemas.py  scrape_service.py
services/: __init__.py  alert_service.py  history_service.py  price_service.py  product_service.py  search_service.py
tasks/: __init__.py  alert.py  celery_app.py  monitor.py  scrape_job.py
tests/: conftest.py  test_scrape_service.py
tests/integration/: test_access_control.py  test_alert_service.py  test_price_service.py  test_product_service.py  test_repositories.py  test_server_service.py  test_user_service.py  test_watch_service.py  test_workers_pipeline.py
tests/unit/: test_adapters.py  test_ai_extract.py  test_alert_service.py  test_bot_ratelimit.py  test_circuit.py  (+16 more)
utils/: __init__.py  chart_builder.py  embed_builder.py  logger.py  url_utils.py
(+58 files in other folders)
