[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "discord-price-tracker"
version = "0.1.0"
description = "Discord-first price tracker bot with web dashboard."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [{ name = "Nouri" }]

dependencies = [
  "sqlalchemy[asyncio]>=2.0,<3",
  "asyncpg>=0.29,<1",
  "alembic>=1.13,<2",
  "pydantic>=2.6,<3",
  "pydantic-settings>=2.2,<3",
  "structlog>=24.1,<25",
  "sentry-sdk>=2.0,<3",
  "opentelemetry-sdk>=1.25,<2",
  "opentelemetry-exporter-otlp-proto-grpc>=1.25,<2",
  "opentelemetry-instrumentation-sqlalchemy>=0.46b0",
  "prometheus-client>=0.20,<1",
  "lxml>=6.0,<7",
  "httpx>=0.27,<1",
]

[project.optional-dependencies]
api = [
  "fastapi>=0.110,<1",
  "uvicorn[standard]>=0.27,<1",
  "opentelemetry-instrumentation-fastapi>=0.46b0",
]
bot = [
  "discord.py>=2.3,<3",
]
workers = [
  "celery>=5.3,<6",
  "redis>=5.0,<6",
  "scrapling[fetchers]>=0.3.13",
  "firecrawl>=2.0,<5",
  "opentelemetry-instrumentation-celery>=0.46b0",
  "opentelemetry-instrumentation-redis>=0.46b0",
]
dev = [
  "ruff>=0.4,<1",
  "mypy>=1.10,<2",
  "pytest>=8,<9",
  "pytest-asyncio>=0.23,<1",
  "pytest-cov>=5,<6",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

# ---------- ruff ----------
[tool.ruff]
target-version = "py312"
line-length = 100
src = ["app", "tests"]

[tool.ruff.lint]
select = [
  "E", "F", "W",        # pycodestyle / pyflakes
  "I",                  # isort
  "B",                  # bugbear
  "UP",                 # pyupgrade
  "SIM",                # simplify
  "TID",                # tidy imports
  "RUF",                # ruff-specific
  "T20",                # bans print() — enforces logging discipline
]
ignore = ["E501"]       # handled by formatter

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["T20"]
"app/db/migrations/**" = ["T20", "I"]
"app/api/**" = ["B008"]

[tool.ruff.format]
quote-style = "double"

# ---------- mypy ----------
[tool.mypy]
python_version = "3.12"
strict = true
plugins = []
warn_unused_configs = true
warn_redundant_casts = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
exclude = ["app/db/migrations/"]

[[tool.mypy.overrides]]
module = ["scrapling.*", "celery.*", "firecrawl.*"]
ignore_missing_imports = true

# ---------- pytest ----------
[tool.pytest.ini_options]
minversion = "8.0"
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
  "integration: requires DATABASE_URL pointing at a clean Postgres",
]
filterwarnings = [
  "error",
  "ignore::DeprecationWarning:celery.*",
]
